--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <header>
     <h1 class="page-title">Taskinator</h1>
     <p>Click the button below to add a new task!</p>
-    <buton class="btn">Add Task</buton>
+    <button class="btn" id="save-task">Add Task</button>
+
   </header>
   <main class="page-content">
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
-      <ul class="task-list">
+      <ul class="task-list" id="tasks-to-do">
         <li class="task-item">
           A task is going to be added soon!
         </li>
@@ -27,7 +28,7 @@
 
 
   <footer>
-    &copy;2020 by Taskinator
+    &copy;2021 by Taskinator
   </footer>
 
   <script src="./assets/js/script.js"></script>
